--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,18 +1,15 @@
-
 .wrapper {
+	font-size: 16pt;
+	font-weight: 200;
+}
+
+.firstWrapper {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: flex-start;
 
 	background-color: #e9e9e9e9;
 	padding-bottom: 50px;
-}
-
-.wrapper p {
-	margin: 50px;
-	font-size: 16pt;
-	font-weight: 200;
 }
 
 .header {
@@ -45,13 +42,15 @@
 	width: 30px;
 }
 
-.body u {
-	text-decoration-thickness: .5px;
+.body {
+	width: 80%;
+	flex: 1 1 auto;
 }
+
 .body span {
 	display: inline-block;
 	background-color: #fefefe;
-	margin-bottom: 1pt;
+	margin-bottom: 3pt;
 	padding: 0 5px 0 5px;
 }
 .body .hello {
@@ -61,6 +60,32 @@
 .thicker {
 	font-weight: 400;
 }
+
+.secondWrapper {
+	width: 80%;
+	margin: 150px auto 150px auto;
+}
+
+
+
+.secondWrapper h1 {
+	margin: 30px 0 10px 0;
+	padding-bottom: 50px;
+}
+
+.projectsWrapper {
+	margin: 20px;
+}
+
+
+.sticky {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+}
+
+
+
 .red {
 	color: #f04e32;
 }
