--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,7 @@
 	flex-direction: column;
 	align-items: center;
 
-	background-color: #e9e9e9e9;
+	background-color: #f6f6f6;
 	padding-bottom: 50px;
 }
 
