--- a/src/styles/ProjectCard.module.css
+++ b/src/styles/ProjectCard.module.css
@@ -4,10 +4,12 @@
 .card img:hover {
 	opacity: .5;
 	width: 440px;
+	height: 260px;
 }
 .card img {
-	transition: opacity .5s ease, width 5s ease-out;
+	transition: opacity .5s ease, width 5s ease-out, height 5s ease-out;
 	margin: 20px 0 0 20px;
+	object-fit: cover;
 }
 .card h2 {
 	margin: 0 0 0 10px;
