--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -67,8 +67,8 @@
 }
 
 .secondWrapper h1 {
-	margin: 30px 0 10px 0;
-	padding-bottom: 50px;
+	/* margin: 30px 0 10px 0;
+	padding-bottom: 50px; */
 }
 
 .projectsWrapper {
@@ -77,9 +77,13 @@
 
 
 .sticky {
+	background-color: rgba(255, 255, 255, 0.517);
+	width: fit-content;
+	padding: 0 5px 0 5px;
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0;
+	z-index: 10;
 }
 
 
