--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -63,16 +63,16 @@
 
 .secondWrapper {
 	width: 80%;
-	margin: 100px auto 150px auto;
-}
-
-.secondWrapper h1 {
-	/* margin: 30px 0 10px 0;
-	padding-bottom: 50px; */
+	margin: 100px auto 100px auto;
 }
 
 .projectsWrapper {
 	margin: 20px;
+}
+
+.thirdWrapper {
+	width: 80%;
+	margin: 50px auto 100px auto;
 }
 
 
