--- a/src/styles/Blog.module.css
+++ b/src/styles/Blog.module.css
@@ -18,14 +18,30 @@
 
 .post {
     padding: 1vh 2vh;
+    margin: 5%;
 	background-color: #3b74ba5d;
-    border-radius: 40px;
+    border-radius: 7px;
+}
+
+.blogWrapper {
+    background-color: #3b74ba41;
+    display: flex;
+    height: 100%;
+    min-height: 100vh;
+}
+
+.menu {
+    border: 2px solid #3b74ba80;
+    border-radius: 5px;
+    width: 600px;
+    flex: 0 5 auto;
 }
 
 .blog {
-    padding: 2vh;
-    background-color: #3b74ba41;
+    padding: 0vw 10vh;
+    padding-top: 5vh;
     text-align: center;
+    flex: 1 7 auto;
 }
 
 .spacer {
@@ -34,14 +50,7 @@
     margin: 3vh;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-}
-
-.spacer div {
-    background-color: #f04e3233;
-    width: 2vh;
-    height: 2vh;
-    margin: 1px;
+    justify-content: space-between;
 }
 
 .red {
