--- a/src/styles/Experience.module.css
+++ b/src/styles/Experience.module.css
@@ -175,6 +175,7 @@
 .item img {
 	position: absolute;
 	width: 40px;
+	height: 40px;
 	border-radius: 50%;
 	border: 1px solid rgb(96, 96, 96);
 	right: -20px;
