--- a/src/styles/Solifaire.module.css
+++ b/src/styles/Solifaire.module.css
@@ -75,9 +75,22 @@
 }
 
 .goal {
-    width: 100px;
-    height: 100px;
-    border: solid green;
+    width: 30vw;
+    height: 50%;
+    border: solid gold;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.goal .goalPile {
+    width: 80px;
+    height: 112px;
+    border: dashed gold;
+}
+
+.goalPile .card {
+    width: 80px;
+    height: 112px;
 }
 
 .clubs, .spades {
