--- a/src/components/solifaire/assets/Solifaire.module.css
+++ b/src/components/solifaire/assets/Solifaire.module.css
@@ -9,20 +9,77 @@
     font-weight: 500;
 }
 
+.game h1 {
+    font-size: 15vw;
+	padding: 15px;
+	line-height: .84em;
+	letter-spacing: -.7rem;
+    color: #f04e32a4;
+    flex: 1 2 auto;
+}
+
+.titleCard {
+    display: flex;
+    gap: 25px;
+}
+
+.titleCard div {
+    display: flex;
+    align-items: center;
+}
+
+.titleCard p {
+    min-height: 300px;
+    border: solid 3pt #3b74ba83;
+    border-radius: 10px;
+    padding: 30px 50px;
+    font-weight: 400;
+    font-size: 16pt;
+}
+
+.dealButton {
+    width: 40vw;
+    background-color: white;
+    border: none;
+    color: #f0609e;
+    border: solid 1px #f0609e;
+    border-radius: 10px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 25px auto;
+}
+
+.dealButton {
+    transition-duration: 0.4s;
+  }
+  
+  .dealButton:hover {
+    background-color: #f0609e; /* Green */
+    color: white;
+  }
+
 .top {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
     height: 50vh;
 }
 
 .field{
     width: 100%;
     height: 300px;
-    border: solid blue;
+    border: solid #3b74ba;
     border-radius: 15px;
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
+    transition-duration: 0.4s;
+}
+.field:hover {
+    background-color: #3b74ba36;
 }
 
 .fieldPile {
@@ -30,13 +87,15 @@
     height: 132px;
     margin: 10px;
     margin-bottom: 3vh;
-    border: dashed purple;
+    border: dashed #3b74baa1;
     border-top: none;
+    border-radius: 5px;
     display: flex;
     flex-direction: column-reverse;
     justify-content: flex-start;
     align-items: center;
     gap: 1px;
+    padding-bottom: 3px;
 }
 
 .card {
@@ -47,12 +106,18 @@
     background-color: black;
     flex: 0 0 auto;
     white-space: pre-line;
+    border-radius: 4px;
 }
 
 .card.up {
     border: solid 1px; 
-    border-color : green;
+    border-color : #04AA6D;
     background-color: white;
+    transition-duration: 0.4s;
+}
+.card.up:hover {
+    background-color: #04aa6d21;
+    font-weight: 900;
 }
 
 .card.child {
@@ -66,23 +131,32 @@
     min-width: 670px;
     height: 90%;
     overflow: auto;
-    padding: 40px;
+    padding: 0 40px;
     border: solid #f04e32;
     border-radius: 15px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap: 3px;
-    flex-wrap: wrap;
+    transition-duration: 0.4s;
+}
+.stock:hover {
+    background-color: #f04e3296;
 }
 
 .stock .button {
-    width: 50px;
-    height: 70px;
+    width: 60px;
+    height: 80px;
     border: solid 1px #f0609e;
     border-radius: 5px;
     color: #f0609e;
     font-size: 28pt;
+    background-color: white;
+    transition-duration: 0.4s;
+}
+.stock .button:hover {
+    background-color: #f0609ec2;
+    color: white;
 }
 
 .stock .card {
@@ -90,8 +164,10 @@
     height: 70px;
     padding-top: 5px; /* to match left */
     border-right: dashed 1px white;
-    border-top: black;
-    border-bottom: black;
+}
+
+.stock .card.hearts, .stock .card.diamonds {
+    border-color: #f04e32;
 }
 
 .stock .card.up {
@@ -100,18 +176,25 @@
 
 .goal {
     width: 30vw;
-    height: 50%;
-    margin-top: 60px;
+    height: 70%;
+    min-height: 135px;
+    padding: 10px 0;
     border: solid #fbad18;
     border-radius: 15px;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    transition-duration: 0.4s;
 }
+.goal:hover {
+    background-color: #fbac182d;
+}
+
 .goalPile {
     width: 80px;
     height: 112px;
     border: dashed #fbad18;
+    flex: 0 1 auto;
 }
 
 .goalPile.empty {
@@ -161,4 +244,8 @@
 }
 .yellow {
 	color: #fbad18;
+}
+
+body.active-modal {
+    overflow-y: hidden;
 }
