--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,14 +1,19 @@
 .navBar {
-	position: relative;
+	/* position: sticky;
+	top: 0;
+	 */
 	list-style-type: none;
 	text-decoration: none;
 	width: 100%;
+	height: 3em;
 	margin: auto;
 	padding: 15px 0 10px 0;
 
 	display: flex;
 	justify-content: space-around;
 	z-index: 900;
+
+	background-color: white;
 }
 
 .backgroundGray {
@@ -25,7 +30,7 @@
 }
 
 .sticky {
-	position: -webkit-sticky;
+	/* position: -webkit-sticky; */
 	position: sticky;
 	top: 0;
 	z-index: 9999;
