--- a/src/components/mobile/styles/HomeMobile.module.css
+++ b/src/components/mobile/styles/HomeMobile.module.css
@@ -85,13 +85,12 @@
 }
 
 
-.sticky {
-	background-color: rgba(255, 255, 255, 0.517);
+.projectsHeader.sticky {
+	background-color: #f0609e27;
 	width: fit-content;
 	padding: 0 5px 0 5px;
-	position: -webkit-sticky;
 	position: sticky;
-	top: 0;
+	top: 1em;
 	z-index: 10;
 }
 
