--- a/src/components/solifaire/assets/Solifaire.module.css
+++ b/src/components/solifaire/assets/Solifaire.module.css
@@ -71,6 +71,7 @@
 .field{
     width: 100%;
     height: 300px;
+    min-height: 180px;
     border: solid #3b74ba;
     border-radius: 15px;
     display: flex;
